# final-nn

./: README.md  digits_autoencoder.ipynb  pyproject.toml  test.ipynb  tf_analysis.ipynb
github/workflows/: main.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
