[build-system]
requires = [
	"flit_core >=3.8",
	"python_version >= '3.9'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "nn"
authors = [{name = "Yaen Chen", email = "yaen.chen@ucsf.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["numpy", "pytest", "typing", "scikit_learn", "matplotlib", "pandas"]

[project.urls]
Home = "https://github.com/yaenchen/final-nn"
